--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 167.88.63.79, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 167.88.63.79, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 167.88.61.175, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-769.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 未知国家-2.56MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-308.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-329.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-457.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-390.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-391.3KB/s(Youtube:不良林), server: 167.88.61.213, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-314.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇫🇷 法国-2.23MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇸🇬 新加坡-2.08MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-3.44MB/s(Youtube:不良林), server: usa-buffalo.lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: usa-buffalo.lvuft.com}}
+  - {name: 🇻🇳 越南-2.79MB/s(Youtube:不良林), server: 192.186.129.66, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 192.186.129.66}}
+  - {name: 🇬🇧 英国-1.49MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 未知国家-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
