--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-391.3KB/s(Youtube:不良林), server: 167.88.61.213, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-314.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇫🇷 法国-2.23MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇸🇬 新加坡-2.08MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-3.44MB/s(Youtube:不良林), server: usa-buffalo.lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: usa-buffalo.lvuft.com}}
-  - {name: 🇻🇳 越南-2.79MB/s(Youtube:不良林), server: 192.186.129.66, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 192.186.129.66}}
-  - {name: 🇬🇧 英国-1.49MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-329.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-672.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: 167.88.63.59, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: xmru011.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: file-1250914411.cos.na-siliconvalley.myqcloud.com}}
+  - {name: 🇺🇸 美国-609.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-591.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-899.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.48MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-443.7KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.55MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-609.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-899.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-443.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-609.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-899.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-443.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-609.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-899.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-443.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-609.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-899.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-443.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-609.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-899.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-443.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-609.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-899.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-443.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活11天)香港-823.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-391.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.79MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-609.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-899.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-443.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
